align and colors repaired of login

--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -15,20 +15,25 @@ body {
 h1 { color: var(--orange); }
 
 input {
-  background-color: var(--gray);
+  background-color: var(--white);
   text-align: center;
   border-radius: 10px;
   padding: 0px;
   border: 0px;
-  margin: 20px;
+  margin: 40px 0 20px 0;
   width: 160px;
   height: 30px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 ::placeholder { color: black; }
+:focus {outline: none;}
 
 button {
   background-color: var(--orange);
   color: var(--dark-gray);
+  margin-bottom: 20px;
   padding: 0px;
   border: 0px;
   margin: 20px;
@@ -36,4 +41,10 @@ button {
   height: 40px;
   border-radius: 10px;
   cursor: pointer;
+  transition: 0.5s;
+}
+
+button:hover {
+  background-color: #F99;
+  transition: 0.5s;
 }
